--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
             </nav>
             <div class="header-block">
                 <div class="text">
-                    <h2>Seu Próximo Carro</h2>
+                    <h2> SEU CARRO NOVO </h2>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia,
-                        asperiores?
+                        Ampla variedade de carros de qualidade para todas as necessidades.
                     </p>
                 </div>
-                <img src="images/car-header.png" alt="Car" />
+                <img src="images/passat-header.png" alt="Car" />
             </div>
         </div>
     </header>
@@ -47,10 +46,29 @@
                 <div class="card-item">
                     <img src="images/car-card.png" alt="Car" />
                     <div class="card-content">
-                        <h3>Audi Supra TT</h3>
+                        <h3>GOLF GTI</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
+                            o GTI está disponível com um motor turbo de 2.0 litros.
+                        </p>
+                        <button type="button">Saber Mais</button>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <img src="images/tiguan.png" alt="Car" />
+                    <div class="card-content">
+                        <h3>Tiguan R-Line</h3>
+                        <p>
+                            O Tiguan é um carro esportivo, elegante e seguro.
+                        </p>
+                        <button type="button">Saber Mais</button>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <img src="images/amarok.png" alt="Car" />
+                    <div class="card-content">
+                        <h3>Amarok V6</h3>
+                        <p>
+                            A Amarok é um carro robusto e versátil. 
                         </p>
                         <button type="button">Saber Mais</button>
                     </div>
@@ -58,10 +76,29 @@
                 <div class="card-item">
                     <img src="images/car-card.png" alt="Car" />
                     <div class="card-content">
-                        <h3>Audi Supra TT</h3>
+                        <h3>GOLF GTI</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
+                            o GTI está disponível com um motor turbo de 2.0 litros.
+                        </p>
+                        <button type="button">Saber Mais</button>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <img src="images/tiguan.png" alt="Car" />
+                    <div class="card-content">
+                        <h3>Tiguan R-Line</h3>
+                        <p>
+                            O Tiguan é um carro esportivo, elegante e seguro.
+                        </p>
+                        <button type="button">Saber Mais</button>
+                    </div>
+                </div>
+                <div class="card-item">
+                    <img src="images/amarok.png" alt="Car" />
+                    <div class="card-content">
+                        <h3>Amarok V6</h3>
+                        <p>
+                            A Amarok é um carro robusto e versátil. 
                         </p>
                         <button type="button">Saber Mais</button>
                     </div>
@@ -69,76 +106,29 @@
                 <div class="card-item">
                     <img src="images/car-card.png" alt="Car" />
                     <div class="card-content">
-                        <h3>Audi Supra TT</h3>
+                        <h3>GOLF GTI</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
+                            o GTI está disponível com um motor turbo de 2.0 litros.
                         </p>
                         <button type="button">Saber Mais</button>
                     </div>
                 </div>
                 <div class="card-item">
-                    <img src="images/car-card.png" alt="Car" />
+                    <img src="images/tiguan.png" alt="Car" />
                     <div class="card-content">
-                        <h3>Audi Supra TT</h3>
+                        <h3>Tiguan R-Line</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
+                            O Tiguan é um carro esportivo, elegante e seguro.
                         </p>
                         <button type="button">Saber Mais</button>
                     </div>
                 </div>
                 <div class="card-item">
-                    <img src="images/car-card.png" alt="Car" />
+                    <img src="images/amarok.png" alt="Car" />
                     <div class="card-content">
-                        <h3>Audi Supra TT</h3>
+                        <h3>Amarok V6</h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
-                        </p>
-                        <button type="button">Saber Mais</button>
-                    </div>
-                </div>
-                <div class="card-item">
-                    <img src="images/car-card.png" alt="Car" />
-                    <div class="card-content">
-                        <h3>Audi Supra TT</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
-                        </p>
-                        <button type="button">Saber Mais</button>
-                    </div>
-                </div>
-                <div class="card-item">
-                    <img src="images/car-card.png" alt="Car" />
-                    <div class="card-content">
-                        <h3>Audi Supra TT</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
-                        </p>
-                        <button type="button">Saber Mais</button>
-                    </div>
-                </div>
-                <div class="card-item">
-                    <img src="images/car-card.png" alt="Car" />
-                    <div class="card-content">
-                        <h3>Audi Supra TT</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
-                        </p>
-                        <button type="button">Saber Mais</button>
-                    </div>
-                </div>
-                <div class="card-item">
-                    <img src="images/car-card.png" alt="Car" />
-                    <div class="card-content">
-                        <h3>Audi Supra TT</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Repellendus.
+                            A Amarok é um carro robusto e versátil. 
                         </p>
                         <button type="button">Saber Mais</button>
                     </div>
@@ -149,7 +139,7 @@
     <section class="about" id="about">
         <div class="content">
             <div class="title-wrapper-about">
-                <p>Sobre Nós</p>
+                <p>Conheça nossa História.</p>
                 <h3>Sobre</h3>
                 <div class="about-content">
                     <div class="left">
@@ -157,7 +147,9 @@
                     </div>
                     <div class="right">
                         <h3>Reunimos Tecnologia e mobilidade</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ratione magnam voluptate doloremque dolore facere repellat provident nemo optio. Quas voluptatem mollitia tempora pariatur optio nesciunt sit soluta enim accusamus. Doloremque eaque pariatur deserunt tempora doloribus sapiente, deleniti repudiandae officia ratione in magnam suscipit. Suscipit earum soluta quaerat facere, ullam recusandae repellendus hic, tempora inventore sunt ducimus ipsum labore quo atque perspiciatis, dolor natus tempore molestiae quia ad ipsam. Repellendus, itaque in quasi amet quidem omnis debitis odit tenetur neque, cumque dolores a, voluptatibus laudantium? Id dolore modi quasi odio ipsam expedita architecto laudantium, cumque nesciunt saepe ea quas voluptate.</p>
+                        <p>A nossa loja de carros é um estabelecimento dedicado a oferecer veículos de alta qualidade e segurança aos nossos clientes. Nós trabalhamos com uma variedade de marcas e modelos, tanto novos quanto usados, para atender às necessidades e orçamentos diferentes dos nossos clientes. Além de vender carros, também oferecemos serviços de manutenção e reparo para garantir que os veículos de nossos clientes estejam sempre em ótimas condições de funcionamento.
+
+                            Como parte de nosso compromisso com a mobilidade e segurança, também oferecemos opções de financiamento e leasing para ajudar os nossos clientes a adquirir o veículo dos seus sonhos. Além disso, contamos com uma equipe de profissionais altamente treinados e experientes que podem ajudar os nossos clientes a escolher o veículo mais adequado para as suas necessidades e garantir que eles tenham a melhor experiência de compra possível. Se você está procurando por um carro novo ou usado de alta qualidade e segurança, não hesite em nos visitar em nossa loja de carros. Estaremos felizes em ajudá-lo a encontrar o veículo perfeito para você.</p>
                     </div>
                 </div>
             </div>
@@ -175,38 +167,38 @@
                 <div class="feature-card-item">
                     <img src="images/feature-planet.png" alt="feature">
                     <div class="text-content">
-                        <h3>Título</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h3>Revisão</h3>
+                        <p>Seu carro bem cuidado por técnicos de confiança.</p>
                     </div>
                 </div><div class="feature-card-item">
                     <img src="images/feature-planet.png" alt="feature">
                     <div class="text-content">
-                        <h3>Título</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h3>Borracharia</h3>
+                        <p>Troca de pneus e desempeno de rodas e serviços de suspenção.</p>
                     </div>
                 </div><div class="feature-card-item">
                     <img src="images/feature-planet.png" alt="feature">
                     <div class="text-content">
-                        <h3>Título</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h3>Lanternagem</h3>
+                        <p>Pintura, Martelinho de Ouro e outros serviços na lataria.</p>
                     </div>
                 </div><div class="feature-card-item">
                     <img src="images/feature-planet.png" alt="feature">
                     <div class="text-content">
-                        <h3>Título</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h3>Higienização</h3>
+                        <p>Higienizção técnica de qualidade, interior, exterior e polimento.</p>
                     </div>
                 </div><div class="feature-card-item">
                     <img src="images/feature-planet.png" alt="feature">
                     <div class="text-content">
-                        <h3>Título</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h3>Ar Condicionado</h3>
+                        <p>Serviços de limpeza e higienização de ar condicionados.</p>
                     </div>
                 </div><div class="feature-card-item">
                     <img src="images/feature-planet.png" alt="feature">
                     <div class="text-content">
-                        <h3>Título</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <h3>Carros Elétricos</h3>
+                        <p>Temos profissionais Habilitados para o reparo do seu veículo .</p>
                     </div>
                 </div>
             </div>
